version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.BooleanList.rst.txt
ansys.fluent.core.solver.flobject.BooleanList
=============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: BooleanList

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~BooleanList.__init__
      ~BooleanList.after_execute
      ~BooleanList.before_execute
      ~BooleanList.default_value
      ~BooleanList.find_object
      ~BooleanList.get_attr
      ~BooleanList.get_attrs
      ~BooleanList.get_state
      ~BooleanList.is_active
      ~BooleanList.is_read_only
      ~BooleanList.print_state
      ~BooleanList.set_flproxy
      ~BooleanList.set_state
      ~BooleanList.state_with_units
      ~BooleanList.to_python_keys
      ~BooleanList.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~BooleanList.file_transfer_service
      ~BooleanList.flproxy
      ~BooleanList.fluent_name
      ~BooleanList.obj_name
      ~BooleanList.parent
      ~BooleanList.path
      ~BooleanList.python_name
      ~BooleanList.python_path
   
   